Display no pdf for articles without one and fix blurry pdf previews

--- a/journalwebsite/styles/pdfviewer.module.css
+++ b/journalwebsite/styles/pdfviewer.module.css
@@ -12,10 +12,11 @@
     }
     .flexcontainer {
         width: 100vw;
-        transform: translateX(-20px);
     }
 
 }
 .flexcontainer {
     width: 80vw;
+    overflow-y: scroll;
+    max-height: 100vh;
 }
